--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
+    "autosize": "^3.0.17",
     "bootstrap-sass": "^3.3.6",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
